add graph algo.