@@ -15,37 +15,41 @@
  *
  */
 
-
 package com.tencent.angel.spark.examples.cluster
 
-import scala.util.Random
-import org.apache.spark.rdd.RDD
-import org.apache.spark.storage.StorageLevel
-import org.apache.spark.{SparkConf, SparkContext}
 import com.tencent.angel.conf.AngelConf
 import com.tencent.angel.ps.storage.matrix.PartitionSourceArray
-import com.tencent.angel.spark.context.PSContext
 import com.tencent.angel.spark.ml.core.ArgsUtil
-import com.tencent.angel.spark.ml.embedding.Param
-import com.tencent.angel.spark.ml.embedding.line.LINEModel
-import com.tencent.angel.spark.ml.feature.{Features, SubSampling}
+import com.tencent.angel.spark.ml.embedding.line2.LINE
 import com.tencent.angel.spark.ml.util.SparkUtils
+import org.apache.spark.sql.{DataFrame, SparkSession}
+import org.apache.spark.sql.types._
+import org.apache.spark.{SparkConf, SparkContext}
 
 object LINEExample {
-
   def main(args: Array[String]): Unit = {
     val params = ArgsUtil.parse(args)
+    val conf = new SparkConf().setMaster("yarn-cluster").setAppName("LINE")
 
-    val conf = new SparkConf().setAppName("LINE")
-    val sc = new SparkContext(conf)
+    val oldModelInput = params.getOrElse("oldModelPath", null)
+    if(oldModelInput != null) {
+      conf.set(s"spark.hadoop.${AngelConf.ANGEL_LOAD_MODEL_PATH}", oldModelInput)
+    }
 
-    conf.set(AngelConf.ANGEL_PS_PARTITION_SOURCE_CLASS, classOf[PartitionSourceArray].getName)
-    conf.set(AngelConf.ANGEL_PS_BACKUP_MATRICES, "")
+    val mode = params.getOrElse("mode", "yarn-cluster")
+    val sc = start(mode)
 
-    PSContext.getOrCreate(sc)
+    val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
+      "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
+      "-XX:InitiatingHeapOccupancyPercent=50 -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 "
+    println(s"executorJvmOptions = ${executorJvmOptions}")
+    conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
+
+    //PSContext.getOrCreate(sc)
 
     val input = params.getOrElse("input", null)
     val output = params.getOrElse("output", "")
+
     val embeddingDim = params.getOrElse("embedding", "10").toInt
     val numNegSamples = params.getOrElse("negative", "5").toInt
     val numEpoch = params.getOrElse("epoch", "10").toInt
@@ -56,8 +60,21 @@ object LINEExample {
     val withSubSample = params.getOrElse("subSample", "true").toBoolean
     val withRemapping = params.getOrElse("remapping", "true").toBoolean
     val order = params.get("order").fold(2)(_.toInt)
-    val checkpointInterval = params.getOrElse("interval", "10").toInt
+    val saveModelInterval = params.getOrElse("saveModelInterval", "10").toInt
+    val checkpointInterval = params.getOrElse("checkpointInterval", "2").toInt
+    val saveMeta = params.getOrElse("saveMeta", "false").toBoolean
 
+    val isWeight = params.getOrElse("isWeight", "false").toBoolean
+    val srcIndex = params.getOrElse("srcIndex", "0").toInt
+    val dstIndex = params.getOrElse("dstIndex", "1").toInt
+    val weightIndex = params.getOrElse("weightIndex", "2").toInt
+    val sep = params.getOrElse("sep", "space") match {
+      case "space" => " "
+      case "comma" => ","
+      case "tab" => "\t"
+    }
+
+    var edges:DataFrame = load(input, isWeight, sep)
 
     val numCores = SparkUtils.getNumCores(conf)
 
@@ -65,57 +82,73 @@ object LINEExample {
     val numDataPartitions = (numCores * 6.25).toInt
     println(s"numDataPartitions=$numDataPartitions")
 
-    val data = sc.textFile(input)
-    data.persist(StorageLevel.DISK_ONLY)
-
-    var corpus: RDD[Array[Int]] = null
-
-    if (withRemapping) {
-      val temp = Features.corpusStringToInt(data)
-      corpus = temp._1
-      temp._2.map(f => s"${f._1}:${f._2}").saveAsTextFile(output + "/mapping")
-    } else {
-      corpus = Features.corpusStringToIntWithoutRemapping(data)
-    }
-
-    val(maxNodeId, docs) = if (withSubSample) {
-      corpus.persist(StorageLevel.DISK_ONLY)
-      val subsampleTmp = SubSampling.sampling(corpus)
-      (subsampleTmp._1, subsampleTmp._2.repartition(numDataPartitions))
-    } else {
-      val tmp = corpus.repartition(numDataPartitions)
-      (tmp.map(_.max).max().toLong + 1, tmp)
-    }
-    val edges = docs.map{
-      arr =>
-        (arr(0), arr(1))
-    }
-
-    edges.persist(StorageLevel.DISK_ONLY)
-
-    val numEdge = edges.count()
-    println(s"numEdge=$numEdge maxNodeId=$maxNodeId")
-
-    corpus.unpersist()
-    data.unpersist()
-
-    val param = new Param()
-      .setLearningRate(stepSize)
-      .setEmbeddingDim(embeddingDim)
-      .setBatchSize(batchSize)
-      .setSeed(Random.nextInt())
-      .setNumPSPart(Some(numPartitions))
-      .setNumEpoch(numEpoch)
-      .setNegSample(numNegSamples)
-      .setMaxIndex(maxNodeId)
-      .setNumRowDataSet(numEdge)
+    val line = new LINE()
+      .setEmbedding(embeddingDim)
+      .setNegative(numNegSamples)
+      .setStepSize(stepSize)
       .setOrder(order)
-      .setModelCPInterval(checkpointInterval)
+      .setEpochNum(numEpoch)
+      .setBatchSize(batchSize)
+      .setPartitionNum(numDataPartitions)
+      .setPSPartitionNum(numPartitions)
+      .setIsWeighted(isWeight)
+      .setRemapping(withRemapping)
+      .setSaveModelInterval(saveModelInterval)
+      .setCheckpointInterval(checkpointInterval)
+      .setOutput(output)
+      .setOldModelPath(oldModelInput)
+      .setSaveMeta(saveMeta)
 
-    val model = new LINEModel(param)
-    model.train(edges, param, output + "/embedding")
-    model.save(output + "/embedding", numEpoch)
-    PSContext.stop()
-    sc.stop()
+    line.transform(edges)
+
+    line.save(output, numEpoch, saveMeta)
+  }
+
+  def start(mode: String): SparkContext = {
+    val conf = new SparkConf()
+
+    // Set specific parameters for LINE
+    conf.set(AngelConf.ANGEL_PS_PARTITION_SOURCE_CLASS, classOf[PartitionSourceArray].getName)
+    // Close the automatic checkpoint
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_BACKUP_AUTO_ENABLE, "false")
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_USE_PARALLEL_GC, "true")
+    conf.set("spark.hadoop." + AngelConf.ANGEL_PS_JVM_PARALLEL_GC_USE_ADAPTIVE_SIZE, "false")
+    conf.set("io.file.buffer.size", "16000000");
+    conf.set("spark.hadoop.io.file.buffer.size", "16000000");
+
+    // Add jvm parameters for executors
+    val executorJvmOptions = " -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:<LOG_DIR>/gc.log " +
+      "-XX:+UseG1GC -XX:MaxGCPauseMillis=1000 -XX:G1HeapRegionSize=32M " +
+      "-XX:InitiatingHeapOccupancyPercent=50 -XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 "
+    println(s"executorJvmOptions = ${executorJvmOptions}")
+    conf.set("spark.executor.extraJavaOptions", executorJvmOptions)
+
+    conf.setMaster(mode)
+    conf.setAppName("LINE")
+    val sc = new SparkContext(conf)
+    //PSContext.getOrCreate(sc)
+    sc
+  }
+
+  def load(input:String, isWeighted:Boolean, sep: String = " ") = {
+    val ss = SparkSession.builder().getOrCreate()
+
+    val schema = if (isWeighted) {
+    StructType(Seq(
+      StructField("src", StringType, nullable = false),
+      StructField("dst", StringType, nullable = false),
+      StructField("weight", FloatType, nullable = false)
+    ))
+  } else {
+    StructType(Seq(
+      StructField("src", StringType, nullable = false),
+      StructField("dst", StringType, nullable = false)
+    ))
+  }
+    ss.read
+      .option("sep", sep)
+      .option("header", "false")
+      .schema(schema)
+      .csv(input)
   }
 }
